--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Charts Telegram Contest</title>
+    <title>Watch</title>
   </head>
   <body>
     <canvas id="canvas" class="canvas"></canvas>
